fix: arrow's color and html form

--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -86,19 +86,21 @@
             <label for="faculty" class="form-label"
               >คณะ <span class="required">*</span></label
             >
-            <select id="faculty" name="faculty" class="form-input">
-              <option selected>เลือกคณะของคุณ</option>
-              <!-- Add faculty options here -->
-            </select>
+            <input
+              type="text"
+              id="faculty"
+              class="form-input"
+            />
           </div>
           <div class="form-group">
             <label for="department" class="form-label"
               >สาขาวิชา <span class="required">*</span></label
             >
-            <select id="department" name="department" class="form-input">
-              <option selected>เลือกสาขาของคุณ</option>
-              <!-- Add department options here -->
-            </select>
+            <input
+              type="text"
+              id="department"
+              class="form-input"
+            />
           </div>
         </div>
 
