--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -92,20 +92,21 @@
             <label for="faculty" class="form-label"
               >คณะ <span class="required">*</span></label
             >
-
-            <select id="faculty" class="form-input">
-              <option selected>เลือกคณะของคุณ</option>
-              <!-- TODO: =เพิ่ม options -->
-            </select>
+            <input
+            type="text"
+            id="faculty"
+            class="form-input"
+          />
           </div>
           <div class="form-group">
             <label for="department" class="form-label"
               >สาขาวิชา <span class="required">*</span></label
             >
-            <select id="department" class="form-input">
-              <option selected>เลือกสาขาของคุณ</option>
-              <!-- TODO: =เพิ่ม options -->
-            </select>
+            <input
+            type="text"
+            id="department"
+            class="form-input"
+          />
           </div>
         </div>
 
@@ -201,7 +202,6 @@
                     <td>
                       <select id="course[1][day]" class="table-input">
                         <option selected>วันที่เรียน</option>
-                        <!-- TODO: =เพิ่ม options -->
                         <option>จันทร์</option>
                         <option>อังคาร</option>
                         <option>พุธ</option>
@@ -262,7 +262,6 @@
                     <td>
                       <select id="course[2][day]" class="table-input">
                         <option selected>วันที่เรียน</option>
-                        <!-- TODO: =เพิ่ม options -->
                         <option>จันทร์</option>
                         <option>อังคาร</option>
                         <option>พุธ</option>
@@ -323,7 +322,6 @@
                     <td>
                       <select id="course[3][day]" class="table-input">
                         <option selected>วันที่เรียน</option>
-                        <!-- TODO: =เพิ่ม options -->
                         <option>จันทร์</option>
                         <option>อังคาร</option>
                         <option>พุธ</option>
