--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -93,20 +93,21 @@
             <label for="faculty" class="form-label"
               >คณะ <span class="required">*</span></label
             >
-
-            <select id="faculty" class="form-input">
-              <option selected>เลือกคณะของคุณ</option>
-              <!-- TODO: =เพิ่ม options -->
-            </select>
+            <input
+              type="text"
+              id="faculty"
+              class="form-input"
+            />
           </div>
           <div class="form-group">
             <label for="department" class="form-label"
               >สาขาวิชา <span class="required">*</span></label
             >
-            <select id="department" class="form-input">
-              <option selected>เลือกสาขาของคุณ</option>
-              <!-- TODO: =เพิ่ม options -->
-            </select>
+            <input
+              type="text"
+              id="department"
+              class="form-input"
+            />
           </div>
         </div>
 
@@ -204,7 +205,6 @@
                 <td>
                   <select id="course[1][day]" class="table-input">
                     <option selected>วันที่เรียน</option>
-                    <!-- TODO: =เพิ่ม options -->
                     <option>จันทร์</option>
                     <option>อังคาร</option>
                     <option>พุธ</option>
@@ -265,7 +265,6 @@
                 <td>
                   <select id="course[2][day]" class="table-input">
                     <option selected>วันที่เรียน</option>
-                    <!-- TODO: =เพิ่ม options -->
                     <option>จันทร์</option>
                     <option>อังคาร</option>
                     <option>พุธ</option>
@@ -326,7 +325,6 @@
                 <td>
                   <select id="course[3][day]" class="table-input">
                     <option selected>วันที่เรียน</option>
-                    <!-- TODO: =เพิ่ม options -->
                     <option>จันทร์</option>
                     <option>อังคาร</option>
                     <option>พุธ</option>
