--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -379,6 +379,6 @@
         </div>
       </form>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
