--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -377,6 +377,6 @@
         </div>
       </form>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
