--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -217,6 +217,6 @@
         </div>
       </form>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
