--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -376,6 +376,6 @@
         </div>
       </form>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
