feat: add validation

--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -37,6 +37,7 @@
               id="date"
               class="form-input"
               placeholder="DD/MM/YYYY"
+              required
             />
           </div>
           <div class="form-group">
@@ -48,6 +49,7 @@
               id="subject"
               class="form-input"
               placeholder="เรื่อง"
+              required
             />
           </div>
         </div>
@@ -62,6 +64,7 @@
               id="full-name"
               class="form-input"
               placeholder="ชื่อ-นามสกุล"
+              required
             />
           </div>
           <div class="form-group">
@@ -73,6 +76,7 @@
               id="registration-number"
               class="form-input"
               placeholder="เลขทะเบียน"
+              required
             />
           </div>
         </div>
@@ -87,6 +91,7 @@
               id="year"
               class="form-input"
               placeholder="ชั้นปี"
+              required
             />
           </div>
           <div class="form-group">
@@ -97,6 +102,7 @@
               type="text"
               id="faculty"
               class="form-input"
+              required
             />
           </div>
           <div class="form-group">
@@ -107,6 +113,7 @@
               type="text"
               id="department"
               class="form-input"
+              required
             />
           </div>
         </div>
@@ -121,6 +128,7 @@
               id="contact-address"
               class="form-input"
               placeholder="ที่อยู่"
+              required
             />
           </div>
         </div>
@@ -135,6 +143,7 @@
               id="mobile-phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
+              required
             />
           </div>
           <div class="form-group">
@@ -147,6 +156,7 @@
               name="email"
               class="form-input"
               placeholder="email@example.com"
+              required
             />
           </div>
         </div>
@@ -160,6 +170,7 @@
             id="advisor"
             class="form-input"
             placeholder="อาจารย์ที่ปรึกษา"
+            required
           />
         </div>
 
@@ -368,6 +379,7 @@
           <textarea
             id="additional-explanation"
             class="form-input explanation-box"
+            required
           ></textarea>
         </div>
 
