--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -38,6 +38,7 @@
               name="date"
               class="form-input"
               placeholder="DD/MM/YYYY"
+              required
             />
           </div>
           <div class="form-group">
@@ -50,6 +51,7 @@
               name="full_name"
               class="form-input"
               placeholder="ชื่อ-นามสกุล"
+              required
             />
           </div>
         </div>
@@ -65,6 +67,7 @@
               name="registration_number"
               class="form-input"
               placeholder="เลขทะเบียน"
+              required
             />
           </div>
           <div class="form-group">
@@ -77,6 +80,7 @@
               name="year"
               class="form-input"
               placeholder="ชั้นปี"
+              required
             />
           </div>
         </div>
@@ -90,6 +94,7 @@
               type="text"
               id="faculty"
               class="form-input"
+              required
             />
           </div>
           <div class="form-group">
@@ -100,6 +105,7 @@
               type="text"
               id="department"
               class="form-input"
+              required
             />
           </div>
         </div>
@@ -115,6 +121,7 @@
               name="mobile_phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
+              required
             />
           </div>
           <div class="form-group">
@@ -127,6 +134,7 @@
               name="email"
               class="form-input"
               placeholder="email@example.com"
+              required
             />
           </div>
         </div>
@@ -141,6 +149,7 @@
             name="contact_address"
             class="form-input"
             placeholder="ที่อยู่"
+            required
           />
         </div>
 
@@ -155,6 +164,7 @@
               name="academic_year"
               class="form-input"
               placeholder="ปีการศึกษา"
+              required
             />
           </div>
           <div class="form-group">
@@ -167,6 +177,7 @@
               name="semester"
               class="form-input"
               placeholder="ภาคการศึกษา"
+              required
             />
           </div>
         </div>
@@ -182,6 +193,7 @@
             name="debt"
             class="form-input"
             placeholder="รายละเอียดหนี้ (ถ้ามี)"
+            required
           />
         </div>
 
