--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -36,6 +36,7 @@
               id="date"
               class="form-input"
               placeholder="DD/MM/YYYY"
+              required
             />
           </div>
           <div class="form-group">
@@ -47,6 +48,7 @@
               id="subject"
               class="form-input"
               placeholder="เรื่อง"
+              required
             />
           </div>
         </div>
@@ -61,6 +63,7 @@
               id="full-name"
               class="form-input"
               placeholder="ชื่อ-นามสกุล"
+              required
             />
           </div>
           <div class="form-group">
@@ -72,6 +75,7 @@
               id="registration-number"
               class="form-input"
               placeholder="เลขทะเบียน"
+              required
             />
           </div>
         </div>
@@ -86,6 +90,7 @@
               id="year"
               class="form-input"
               placeholder="ชั้นปี"
+              required
             />
           </div>
           <div class="form-group">
@@ -96,6 +101,7 @@
             type="text"
             id="faculty"
             class="form-input"
+            required
           />
           </div>
           <div class="form-group">
@@ -106,6 +112,7 @@
             type="text"
             id="department"
             class="form-input"
+            required
           />
           </div>
         </div>
@@ -120,6 +127,7 @@
               id="contact-address"
               class="form-input"
               placeholder="ที่อยู่"
+              required
             />
           </div>
         </div>
@@ -134,6 +142,7 @@
               id="mobile-phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
+              required
             />
           </div>
           <div class="form-group">
@@ -146,6 +155,7 @@
               name="email"
               class="form-input"
               placeholder="email@example.com"
+              required
             />
           </div>
         </div>
@@ -159,6 +169,7 @@
             id="advisor"
             class="form-input"
             placeholder="อาจารย์ที่ปรึกษา"
+            required
           />
         </div>
 
@@ -367,6 +378,7 @@
           <textarea
             id="additional-explanation"
             class="form-input explanation-box"
+            required
           ></textarea>
         </div>
 
