fix: validation for phone numbers

--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -143,6 +143,9 @@
               id="mobile-phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
+              pattern="\d{10}"           
+              maxlength="10"
+              title="กรุณาใส่เบอร์โทรศัพท์ให้ครบ 10 หลัก"             
               required
             />
           </div>
