--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -121,6 +121,9 @@
               name="mobile_phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
+              pattern="\d{10}"           
+              maxlength="10"
+              title="กรุณาใส่เบอร์โทรศัพท์ให้ครบ 10 หลัก" 
               required
             />
           </div>
