fix: add name phone number to html form

--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -140,6 +140,7 @@
             <input
               type="tel"
               id="mobile-phone"
+              name="mobile_phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
               pattern="\d{10}"           
