--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -177,81 +177,72 @@
             required
           />
         </div>
+        
+        <div class="form-row">
+          <div class="form-group">
+            <label for="academic-year" class="form-label"
+              >ปีการศึกษา <span class="required">*</span></label
+            >
+            <input
+              type="text"
+              id="academic-year"
+              name="academic_year"
+              class="form-input"
+              placeholder="ปีการศึกษา"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="semester" class="form-label"
+              >ภาคการศึกษา <span class="required">*</span></label
+            >
+            <input
+              type="text"
+              id="semester"
+              name="semester"
+              class="form-input"
+              placeholder="ภาคการศึกษา"
+              required
+            />
+          </div>
+        </div>
+
 
         <div class="form-group">
-          <p class="table-label">มีความประสงค์ขอจดทะเบียนล่าช้าในรายวิชา</p>
+          <p class="table-label">มีความประสงค์ขอจดทะเบียนรายวิชาข้ามหลักสูตร
+          </p>
           <table class="course-table">
             <thead>
               <tr>
-                <th>ลำดับ</th>
                 <th>รหัสวิชา</th>
                 <th>ชื่อวิชา</th>
                 <th>Section</th>
-                <th>วัน/เวลา</th>
-                <th>หน่วยกิต</th>
               </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>
-                      <input
-                        type="text"
-                        name="course[1][code]"
-                        class="table-input"
-                      />
-                    </td>
-                    <td>
-                      <input
-                        type="text"
-                        name="course[1][name]"
-                        class="table-input"
-                      />
-                    </td>
-                    <td>
-                      <input
-                        type="text"
-                        name="course[1][section]"
-                        class="table-input"
-                      />
-                    </td>
-                    <td>
-                      <select id="course[1][day]" class="table-input">
-                        <option selected>วันที่เรียน</option>
-                        <option>จันทร์</option>
-                        <option>อังคาร</option>
-                        <option>พุธ</option>
-                        <option>พฤหัสบดี</option>
-                        <option>ศุกร์</option>
-                        <option>เสาร์</option>
-                        <option>อาทิตย์</option>
-                      </select>
-                    </td>
-                    <td>
-                      <div>
-                        <input
-                          type="time"
-                          name="course[1][timeStart]"
-                          class="table-input time-input"
-                          placeholder="Start Time"
-                        />
-                    </td>
-                    <td>
-                      <input
-                        type="time"
-                        name="course[1][timeEnd]"
-                        class="table-input time-input"
-                        placeholder="End Time"
-                      />
-                    
-                    <td>
-                      <input
-                        type="text"
-                        name="course[1][credits]"
-                        class="table-input"
-                      />
-                    </td>
-                  </tr>
+              <tr>
+                <td>
+                  <input
+                    type="text"
+                    name="course_code"
+                    class="table-input"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="text"
+                    name="course_name"
+                    class="table-input"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="text"
+                    name="course_section"
+                    class="table-input"
+                  />
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
