fix(form): fix placeholder="1" to value="1" at student year and semester feat: add save and load draft function from local storage - Keys = draft_${form_type}

--- a/frontend/public/HTML/edit.html
+++ b/frontend/public/HTML/edit.html
@@ -29,5 +29,6 @@
     </div>
     <script src="../JS/formLoader.js"></script>
     <script src="../JS/formCaller.js"></script>
+    <script src="../JS/saveAndLoadData.js"></script>
 </body>
 </html>
