fix: restyling and fix html required

--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -227,6 +227,7 @@
                     type="text"
                     name="course_code"
                     class="table-input"
+                    required
                   />
                 </td>
                 <td>
@@ -234,6 +235,7 @@
                     type="text"
                     name="course_name"
                     class="table-input"
+                    required
                   />
                 </td>
                 <td>
@@ -241,6 +243,7 @@
                     type="text"
                     name="course_section"
                     class="table-input"
+                    required
                   />
                 </td>
               </tr>
