--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -230,6 +230,7 @@
                     type="text"
                     name="course_code"
                     class="table-input"
+                    required
                   />
                 </td>
                 <td>
@@ -237,6 +238,7 @@
                     type="text"
                     name="course_name"
                     class="table-input"
+                    required
                   />
                 </td>
                 <td>
@@ -244,6 +246,7 @@
                     type="text"
                     name="course_section"
                     class="table-input"
+                    required
                   />
                 </td>
               </tr>
