--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -19,7 +19,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
                 <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z" fill="#515151"/>
                 </svg>
-              <h4>เลือกแบบฟอร์มคำร้องที่ต้องการ</h4>
+              <h4>เลือกแบบฟอร์ม<br>คำร้องที่ต้องการ</h4>
             </a>
           </li>
         </ul>
@@ -120,8 +120,7 @@
           />
           </div>
         </div>
-
-        <div class="form-row">
+ 
           <div class="form-group">
             <label for="contact-address" class="form-label"
               >ที่อยู่ที่สามารถติดต่อได้ <span class="required">*</span></label
@@ -134,7 +133,6 @@
               required
             />
           </div>
-        </div>
 
         <div class="form-row">
           <div class="form-group">
@@ -228,6 +226,7 @@
                     type="text"
                     name="course_code"
                     class="table-input"
+                    required
                   />
                 </td>
                 <td>
@@ -235,6 +234,7 @@
                     type="text"
                     name="course_name"
                     class="table-input"
+                    required
                   />
                 </td>
                 <td>
@@ -242,6 +242,7 @@
                     type="text"
                     name="course_section"
                     class="table-input"
+                    required
                   />
                 </td>
               </tr>
