--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>คำร้องจดทะเบียนล่าช้า</title>
     <title>คำร้องลาออก</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="/css/form_styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -238,6 +238,6 @@
         </div>
       </form>
     </div>
-    <script src="../js/script.js"></script>
+    <script src="/js/form.js"></script>
   </body>
 </html>
