fix: change some id in form and fix fill in js

--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -38,7 +38,7 @@
             <input
               type="date"
               id="date"
-              class="form-input"
+              class="form-input"  
               placeholder="DD/MM/YYYY"
               required
             />
@@ -64,7 +64,7 @@
             >
             <input
               type="text"
-              id="full-name"
+              id="full_name"
               class="form-input"
               placeholder="ชื่อ-นามสกุล"
               required
@@ -76,7 +76,7 @@
             >
             <input
               type="text"
-              id="registration-number"
+              id="registration_number"
               class="form-input"
               placeholder="เลขทะเบียน"
               required
@@ -128,7 +128,7 @@
             >
             <input
               type="text"
-              id="contact-address"
+              id="contact_address"
               class="form-input"
               placeholder="ที่อยู่"
               required
@@ -143,7 +143,7 @@
             >
             <input
               type="tel"
-              id="mobile-phone"
+              id="mobile_phone"
               name="mobile_phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
@@ -188,7 +188,7 @@
               >
               <input
                 type="text"
-                id="academic-year"
+                id="academic_year"
                 name="academic_year"
                 class="form-input"
                 placeholder="ปีการศึกษา"
@@ -256,7 +256,7 @@
             >ชี้แจงเหตุผลเพิ่มเติม <span class="required">*</span></label
           >
           <textarea
-            id="additional-explanation"
+            id="additional_explanation"
             class="form-input explanation-box"
             required
           ></textarea>
