--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -65,7 +65,7 @@
             >
             <input
               type="text"
-              id="full-name"
+              id="full_name"
               class="form-input"
               placeholder="ชื่อ-นามสกุล"
               required
@@ -77,7 +77,7 @@
             >
             <input
               type="text"
-              id="registration-number"
+              id="registration_number"
               class="form-input"
               placeholder="เลขทะเบียน"
               required
@@ -129,7 +129,7 @@
             >
             <input
               type="text"
-              id="contact-address"
+              id="contact_address"
               class="form-input"
               placeholder="ที่อยู่"
               required
@@ -144,7 +144,7 @@
             >
             <input
               type="tel"
-              id="mobile-phone"
+              id="mobile_phone"
               name="mobile_phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
@@ -189,7 +189,7 @@
             >
             <input
               type="text"
-              id="academic-year"
+              id="academic_year"
               name="academic_year"
               class="form-input"
               placeholder="ปีการศึกษา"
@@ -259,7 +259,7 @@
             >ชี้แจงเหตุผลเพิ่มเติม <span class="required">*</span></label
           >
           <textarea
-            id="additional-explanation"
+            id="additional_explanation"
             class="form-input explanation-box"
             required
           ></textarea>
