--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -51,7 +51,7 @@
             >
             <input
               type="text"
-              id="full-name"
+              id="full_name"
               name="full_name"
               class="form-input"
               placeholder="ชื่อ-นามสกุล"
@@ -67,7 +67,7 @@
             >
             <input
               type="text"
-              id="registration-number"
+              id="registration_number"
               name="registration_number"
               class="form-input"
               placeholder="เลขทะเบียน"
@@ -121,7 +121,7 @@
             >
             <input
               type="tel"
-              id="mobile-phone"
+              id="mobile_phone"
               name="mobile_phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
@@ -152,7 +152,7 @@
           >
           <input
             type="text"
-            id="contact-address"
+            id="contact_address"
             name="contact_address"
             class="form-input"
             placeholder="ที่อยู่"
@@ -167,7 +167,7 @@
             >
             <input
               type="text"
-              id="academic-year"
+              id="academic_year"
               name="academic_year"
               class="form-input"
               placeholder="ปีการศึกษา"
@@ -211,7 +211,7 @@
           <div>
             <input
               type="radio"
-              id="want-grade"
+              id="want_grade"
               name="grade_request"
               value="want"
               class="radio-input"
@@ -222,7 +222,7 @@
           <div>
             <input
               type="radio"
-              id="dont-want-grade"
+              id="dont_want_grade"
               name="grade_request"
               value="dont-want"
               class="radio-input"
