--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -64,7 +64,7 @@
             >
             <input
               type="text"
-              id="full-name"
+              id="full_name"
               class="form-input"
               placeholder="ชื่อ-นามสกุล"
               required
@@ -76,7 +76,7 @@
             >
             <input
               type="text"
-              id="registration-number"
+              id="registration_number"
               class="form-input"
               placeholder="เลขทะเบียน"
               required
@@ -127,7 +127,7 @@
             >
             <input
               type="text"
-              id="contact-address"
+              id="contact_address"
               class="form-input"
               placeholder="ที่อยู่"
               required
@@ -141,7 +141,7 @@
             >
             <input
               type="tel"
-              id="mobile-phone"
+              id="mobile_phone"
               name="mobile_phone"
               class="form-input"
               placeholder="โทรศัพท์มือถือ"
@@ -186,7 +186,7 @@
             >
             <input
               type="text"
-              id="academic-year"
+              id="academic_year"
               name="academic_year"
               class="form-input"
               placeholder="ปีการศึกษา"
@@ -255,7 +255,7 @@
             >ชี้แจงเหตุผลเพิ่มเติม <span class="required">*</span></label
           >
           <textarea
-            id="additional-explanation"
+            id="additional_explanation"
             class="form-input explanation-box"
             required
           ></textarea>
