fix: change logo in index.html and adjust resign form.

--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -14,7 +14,7 @@
             <h1>LOGIN</h1>
             <p>request form</p>
           </div>
-          <img src="img/tu-logo.png" alt="Logo" class="logo" />
+          <img src="img/tu-logo.webp" alt="Logo" class="logo" />
         </div>
         <form id="loginForm">
           <label for="username">Username</label>
