--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -46,6 +46,21 @@
             />
           </div>
           <div class="form-group">
+            <label for="subject" class="form-label"
+              >เรื่อง <span class="required">*</span></label
+            >
+            <input
+              type="text"
+              id="subject"
+              class="form-input"
+              placeholder="เรื่อง"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
             <label for="full-name" class="form-label"
               >ชื่อ-นามสกุล (ใส่คำนำหน้า) <span class="required">*</span></label
             >
@@ -58,9 +73,6 @@
               required
             />
           </div>
-        </div>
-
-        <div class="form-row">
           <div class="form-group">
             <label for="registration-number" class="form-label"
               >เลขทะเบียน <span class="required">*</span></label
@@ -74,6 +86,9 @@
               required
             />
           </div>
+        </div>
+
+        <div class="form-row">
           <div class="form-group">
             <label for="year" class="form-label"
               >ชั้นปี <span class="required">*</span></label
@@ -87,9 +102,6 @@
               required
             />
           </div>
-        </div>
-
-        <div class="form-row">
           <div class="form-group">
             <label for="faculty" class="form-label"
               >คณะ <span class="required">*</span></label
@@ -112,6 +124,20 @@
               required
             />
           </div>
+        </div>
+
+        <div class="form-group">
+          <label for="contact-address" class="form-label"
+            >ที่อยู่ที่สามารถติดต่อได้ <span class="required">*</span></label
+          >
+          <input
+            type="text"
+            id="contact_address"
+            name="contact_address"
+            class="form-input"
+            placeholder="ที่อยู่"
+            required
+          />
         </div>
 
         <div class="form-row">
@@ -145,17 +171,16 @@
             />
           </div>
         </div>
-
+        
         <div class="form-group">
-          <label for="contact-address" class="form-label"
-            >ที่อยู่ที่สามารถติดต่อได้ <span class="required">*</span></label
+          <label for="advisor" class="form-label"
+            >อาจารย์ที่ปรึกษา <span class="required">*</span></label
           >
           <input
             type="text"
-            id="contact_address"
-            name="contact_address"
+            id="advisor"
             class="form-input"
-            placeholder="ที่อยู่"
+            placeholder="อาจารย์ที่ปรึกษา"
             required
           />
         </div>
