--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -124,21 +124,6 @@
 
         <div class="form-row">
           <div class="form-group">
-            <label for="contact-address" class="form-label"
-              >ที่อยู่ที่สามารถติดต่อได้ <span class="required">*</span></label
-            >
-            <input
-              type="text"
-              id="contact_address"
-              class="form-input"
-              placeholder="ที่อยู่"
-              required
-            />
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group">
             <label for="mobile-phone" class="form-label"
               >โทรศัพท์มือถือ <span class="required">*</span></label
             >
@@ -155,15 +140,47 @@
             />
           </div>
           <div class="form-group">
-            <label for="email" class="form-label"
-              >Email <span class="required">*</span></label
+            <label for="mobile-phone" class="form-label"
+              >โทรศัพท์มือถือผู้ปกครอง <span class="required">*</span></label
             >
             <input
-              type="email"
-              id="email"
-              name="email"
+              type="tel"
+              id="relativemobile_phone"
+              name="relativemobile_phone"
               class="form-input"
-              placeholder="email@example.com"
+              placeholder="โทรศัพท์มือถือผู้ปกครอง"
+              pattern="\d{10}"           
+              maxlength="10"
+              title="กรุณาใส่เบอร์โทรศัพท์ให้ครบ 10 หลัก" 
+              required
+            />
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="email" class="form-label"
+            >Email <span class="required">*</span></label
+          >
+          <input
+            type="email"
+            id="email"
+            name="email"
+            class="form-input"
+            placeholder="email@example.com"
+            required
+          />
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label for="contact-address" class="form-label"
+              >ที่อยู่ที่สามารถติดต่อได้ <span class="required">*</span></label
+            >
+            <input
+              type="text"
+              id="contact_address"
+              class="form-input"
+              placeholder="ที่อยู่"
               required
             />
           </div>
