--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -121,19 +121,6 @@
           </div>
         </div>
  
-          <div class="form-group">
-            <label for="contact-address" class="form-label"
-              >ที่อยู่ที่สามารถติดต่อได้ <span class="required">*</span></label
-            >
-            <input
-              type="text"
-              id="contact_address"
-              class="form-input"
-              placeholder="ที่อยู่"
-              required
-            />
-          </div>
-
         <div class="form-row">
           <div class="form-group">
             <label for="mobile-phone" class="form-label"
@@ -151,19 +138,50 @@
               required
             />
           </div>
+          
           <div class="form-group">
-            <label for="email" class="form-label"
-              >Email <span class="required">*</span></label
+            <label for="mobile-phone" class="form-label"
+              >โทรศัพท์มือถือผู้ปกครอง <span class="required">*</span></label
             >
             <input
-              type="email"
-              id="email"
-              name="email"
+              type="tel"
+              id="relativemobile_phone"
+              name="relativemobile_phone"
               class="form-input"
-              placeholder="email@example.com"
+              placeholder="โทรศัพท์มือถือผู้ปกครอง"
+              pattern="\d{10}"           
+              maxlength="10"
+              title="กรุณาใส่เบอร์โทรศัพท์ให้ครบ 10 หลัก" 
               required
             />
           </div>
+        </div>
+
+        <div class="form-group">
+          <label for="email" class="form-label"
+            >Email <span class="required">*</span></label
+          >
+          <input
+            type="email"
+            id="email"
+            name="email"
+            class="form-input"
+            placeholder="email@example.com"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="contact-address" class="form-label"
+            >ที่อยู่ที่สามารถติดต่อได้ <span class="required">*</span></label
+          >
+          <input
+            type="text"
+            id="contact_address"
+            class="form-input"
+            placeholder="ที่อยู่"
+            required
+          />
         </div>
 
         <div class="form-group">
@@ -207,7 +225,6 @@
             />
           </div>
         </div>
-
 
         <div class="form-group">
           <p class="table-label">มีความประสงค์ขอถอนรายวิชา (Drop W)</p>
