--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,73 @@
   <title>HTML Page</title>
 </head>
 <body>
+  <button id="cancelRequestButton">ยกเลิกคำร้อง</button>
+
+  <!-- โครงสร้างป๊อปอัปสำหรับยกเลิกคำร้อง -->
+  <div id="cancelPopup" class="popup">
+    <div class="popup-content">
+      <h2>ยืนยันการยกเลิกคำร้อง</h2>
+      <p>คุณต้องการยกเลิกคำร้องนี้หรือไม่?</p>
+      <button id="confirmCancel" class="button confirm">ยืนยัน</button>
+      <button id="closePopup" class="button cancel">ยกเลิก</button>
+    </div>
+  </div>
+
+  <script src="cancel.js"></script>
+  <style>
+    body {
+    font-family: Arial, sans-serif;
+  }
   
+  .popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .button {
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  #cancelRequestButton {
+    background-color: crimson;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 12px;
+  }
+  
+  .confirm {
+    background-color: crimson;
+    color: white;
+  }
+  
+  .cancel {
+    background-color: #cccccc;
+    color: black;
+  }
+  </style>
 </body>
 </html>
