--- a/frontend/public/HTML/edit.html
+++ b/frontend/public/HTML/edit.html
@@ -13,15 +13,14 @@
 </head>
 <body>
     <div class="side-nav">
-        <h2>
-            <a href="../index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
-                    <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z" fill="#515151"/>
-                </svg>
-            </a>
+        <a href="../index.html" class="back-link">
+            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+                <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z" fill="#515151"/>
+            </svg>
             <span>เลือกแบบฟอร์ม<br>คำร้องที่ต้องการ</span>
-        </h2>
+        </a>
     </div>
+
     <div class="form" style="margin-left: 320px;">
         <div id="form-container" class="none">
             <!-- The form content will be loaded here -->
