feat add backend cancal request

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <script src="cancel.js"></script>
+  <script src="../public/js/cancel.js"></script>
   <style>
     body {
     font-family: Arial, sans-serif;
