--- a/frontend/public/form/reg_request.html
+++ b/frontend/public/form/reg_request.html
@@ -15,7 +15,7 @@
       <div class="sidebar">
         <ul>
           <li>
-            <a href="index.html" class="back-link">
+            <a href="/template/template.html" class="back-link">
               <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
                 <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z" fill="#515151"/>
                 </svg>
