--- a/frontend/public/form/delayed_registration.html
+++ b/frontend/public/form/delayed_registration.html
@@ -84,7 +84,7 @@
           </div>
         </div>
 
-        <div class="form-row">
+        <div class="form-row-3">
           <div class="form-group">
             <label for="year" class="form-label"
               >ชั้นปี <span class="required">*</span></label
