--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -14,7 +14,7 @@
             <h1>LOGIN</h1>
             <p>request form</p>
           </div>
-          <img src="img/tu-logo.webp" alt="Logo" class="logo" />
+          <img src="img/Emblem_of_Thammasat_University.svg.png" alt="Logo" class="logo" width="500px" height="500px"/>
         </div>
         <form id="loginForm">
           <label for="username">Username</label>
